Fixed broken overflow of main calendar page

--- a/public/style.css
+++ b/public/style.css
@@ -24,20 +24,13 @@ body {
 
 @media (min-width: 768px) {
     .widewrapper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
         width: 80%;
-        height: 1150px;
         margin: 1em auto;
         border: 4px solid #e2e2e2;
         box-shadow: 0 10px 9px -6px #c5c5c5;
         border-top-width: 25px;
         border-bottom-width: 32px;
         border-radius: 8px;
-        overflow: hidden;
     }
 
     .narrowwrapper {
